Fix button alignment

--- a/src/css/_page--files.scss
+++ b/src/css/_page--files.scss
@@ -98,6 +98,7 @@
         font-size: 14px;
         text-align: left;
         font-weight: 500;
+        height: 22px;
         box-sizing: border-box;
         padding: 0 10px 8px;
         width: 100%;
