--- a/src/css/_sidebar.scss
+++ b/src/css/_sidebar.scss
@@ -150,6 +150,8 @@
             text-align: center;
             font-weight: 500;
             padding-bottom: 8px;
+            height: 22px;
+            box-sizing: border-box;
         }
 
     }
